# data_science_tutorials

./: .env  .gitignore  .~lock.What_AI_is_about.odg#  README.md  fixplot.html  paretoplot.html  plotly_data_distribution.html  pyproject.toml
dagster_mlflow_pipeline/: README.md
dagster_pipeline/: README.md  dagster_pipeline_part2.md  dagster_pipeline_part3.md  dagster_pipeline_part4.md  dagster_pipeline_part5.md
dagster_pipeline/assets/: .~lock.pipeline_dagster.odg#
data_preprocessing/: README.md
mlflow_tutorial/: MLFlow_part2.md  MLFlow_part3.md  MLFlow_part4.md  MLFlow_part5.md  README.md
mlflow_tutorial/assets/: .~lock.MLFlow_usage.odg#  docker-compose-up.xcf  initial_mlflow_container.xcf  mlflow_choose_model.xcf  mlflow_experiments.xcf  script_execution.xcf
mlruns/0/: meta.yaml
polymer_process_improvement/: README.md  Readme_Polymer.md  Readme_Polymer_part1.md  Readme_Polymer_part2.md  Readme_Polymer_part3.md  Readme_Polymer_part4.md  Readme_Polymer_part5.md  Readme_Polymer_part6.md
polymer_process_improvement/data/: .~lock.battery.csv#  BaselineYieldData.csv  CrisisTeamData.csv  CrisisTeamData.parquet  MSA_MFI_Final.csv  MSA_MFI_initial.csv  MSA_Xf_Final.csv  MSA_Xf_initial.csv  VSSTamData.csv  VSSTeamData.parquet  battery.csv  (+1 more)
predictive_maintenance_hd/: README.md  Readme_part2.md  Readme_part3.md
price_management/: README.md  Readme_part2.md  Readme_part3.md  Readme_part4.md
rusted_parts/: README.md  Readme_part2.md  Readme_part3.md  Readme_part4.md  Readme_part5.md
tool_stack/: Readme_toolstack_part1.md
virtual_environments/: README.md
(+74 files in other folders)
