[tool.poetry]
name = "data_science_tutorials"
version = "0.1.0"
description = ""
authors = ["Heiko Kulinna <Heikokulinna@gmx.de>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.9"
pandas = "^1.3.4"
numpy = "^1.21.4"
plotly = "^5.4.0"
mlflow = "^1.21.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
